--- a/BattleshipAdvisor/res/values/strings.xml
+++ b/BattleshipAdvisor/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
+    <color name="black">#000000</color>
 
 </resources>
